# budgetme-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: data.rs  datasources.rs  main.rs
