[package]
name = "budgetme"
version = "0.1.0"
authors = ["Colin Redman <20376935+credman0@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
dirs = "3.0"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
derivative = "2.1.3"