[package]
name = "budget"
version = "1.0.0"
authors = ["Colin Redman <20376935+credman0@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
dirs = "3.0"
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
derivative = "2.1.3"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
async-trait = "0.1.42"
futures = "0.3.12"
tokio = "1.1.1"

[profile.release]
lto = true